--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="logos/entrega-rapidawhite.png" type="image/x-icon">
     <style>
-        * { border: 1px solid black; }
+      
     </style>
 
 </head>
@@ -25,19 +25,31 @@
         </div>
 </header>
 <body>
-    <h2>Estamos no planeta</h2>
-    <img src="css/images/image2.jpg" alt="" height="300px">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?
-    <img src="css/images/image4.png" alt="" height="300px">    
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?
-    <img src="css/images/image6.png" alt="" height="300px">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?
-    <img src="css/images/image7.png" alt="" height="300px">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?
-    <img src="css/images/image8.png" alt="" height="300px">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?
-    <img src="css/images/imagem1" alt="" height="300px">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?
+    
+        <div>
+            <img src="css/images/image7.png" alt="" height="500px">
+            <h2>Fazemos sua entrega em até 24 horas</h2>
+        </div>
+        <div>
+            <img src="css/images/image4.png" alt="" height="300px">    
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?</p>
+        </div>
+        <div>
+            <img src="css/images/image6.png" alt="" height="300px">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?</p>
+        </div>
+        <div>
+            <img src="css/images/image2.jpg" alt="" height="300px">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?</p>
+        </div>
+       <div>
+            <img src="css/images/image8.png" alt="" height="300px">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?</p>
+       </div>
+        <div>
+            <img src="css/images/imagem1" alt="" height="300px">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?</p>
+        </div>
 </body>
 <footer>
     <p>footer</p>
