--- a/index.html
+++ b/index.html
@@ -25,30 +25,21 @@
         </div>
 </header>
 <body>
-    
         <div>
             <img src="css/images/image7.png" alt="" height="500px">
-            <h2>Fazemos sua entrega em até 24 horas</h2>
+            <h2>Bem-vindos a melhor transportadora do país!</h2>
+        </div>
+        <div>   
+            <p>Várias frotas disponíveis em todas as capitais do país!</p>
+            <img src="css/images/image6.png" alt="" height="600px"> 
         </div>
         <div>
-            <img src="css/images/image4.png" alt="" height="300px">    
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?</p>
+            <img src="css/images/image2.jpg" alt="" height="500px">
+            <p>Profissionais capacitados para te oferecer o melhor atendimento</p>
         </div>
-        <div>
-            <img src="css/images/image6.png" alt="" height="300px">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?</p>
-        </div>
-        <div>
-            <img src="css/images/image2.jpg" alt="" height="300px">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?</p>
-        </div>
-       <div>
-            <img src="css/images/image8.png" alt="" height="300px">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?</p>
-       </div>
         <div>
             <img src="css/images/imagem1" alt="" height="300px">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam cumque tempore neque eaque omnis architecto accusantium voluptates maiores ducimus enim, a, illo similique ipsum quod consectetur repellat, dicta tenetur?</p>
+            <p>Clientes satisfeitos são a nossa marca</p>
         </div>
 </body>
 <footer>
